# car-ros2

./: readme.md
dockerfile/: dockerfile_Gazebo_Ros  dockerfile_Gazebo_rendering
workspace/install/: local_setup.sh  setup.sh
workspace/install/car/lib/car/: keyboard
workspace/install/car/share/car/: package.bash  package.sh  package.xml  package.zsh
workspace/install/car/share/car/launch/: gazebo.launch.py  gazebo_mountain.launch.py
workspace/install/car/share/car/meshes/: Camara_left_1.stl  Wheel_front_left_1.stl  Wheel_front_right_1.stl  base_link.stl
workspace/install/car/share/car/urdf/: camera.plugin.xacro  car.gazebo  depth.plugin.xacro
workspace/install/car_cpp/share/car_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/log/: latest_build
workspace/src/car/: CMakeList.txt  setup.cfg  setup.py
workspace/src/car/car/: keyboard.cpp
workspace/src/car/launch/: display.launch.py  gazebo_alone.launch.py
workspace/src/car/meshes/: Camara_back_1.stl  Camara_front_1.stl  Camara_right_1.stl  Laser_1.stl  Wheel_back_left_1.stl  Wheel_back_right_1.stl
workspace/src/car/urdf/: car.plugin.xacro  car.trans  car.xacro
workspace/src/car/worlds/: empty.world
workspace/src/car_cpp/: CMakeLists.txt
workspace/src/car_cpp/src/: test_node.cpp
